# C

./: .gitignore  README.md
codewars/: 1.c
labs_god/: lab_1.c
labs_god/lab1/: lab_1.c
labs_god/lab2/: lab_2.c
labs_god/lab3/: lab_3.c  main3.c
labs_god/lab4/: CMakeLists.txt  README.md  main.c  merge.c  rand.py
labs_god/lab4/choice_sort/: choice.c  choice_funcs.c  choice_funcs.h
labs_god/lab4/general_functions/: general_funcs.c  general_funcs.h
labs_god/lab4/insertion_sort/: insertion.c
labs_god/lab4/merge_sort/: merge.c  merge_funcs.c  merge_funcs.h
labs_god/lab4/other/: rand.py  test.c
labs_god/lab4/pigeonhole_sort/: pigeonhole.c
labs_god/lab4/radix_sort/: radix.c
labs_god/lab4/shell_sort/: shell.c  shell_funcs.c  shell_funcs.h
labs_god/lab4/source/: choice.c  merge.c  pigeonhole.c
labs_god/lab5/: README.md  file_in.txt  (+8 more)
labs_kir/: lab_0.1.c  lab_0_1.c  lab_0_2.c  lab_1_1.c  lab_1_2.c  lab_2.1.c  lab_2.2.c  lab_2.3.c  lab_2.c  lab_2_2.c  lab_2_3.c  lab_3.c  lab_3_1.c  lab_3_2.c  lab_4_1.c  lab_4_2.c  lab_5.c  lab_7.c  tempCodeRunnerFile.c
other/: amount_symbol_in_str.c  book.c  calculator.c  choice_sort.c  delete_dublicate.c  dynamic_malloc.c  dynamic_realloc.c  sizeof.c  spiral_matrix.c  struct.c  unique_elements.c
tasks/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  tempCodeRunnerFile.c  test.c
tasks_sem/: binary_search.c  buble_sort.c  different_el_in_arr.c  fact.c  min_max_in_arr.c  sum_of_subarr.c
tmp/: del_str_symb.c  factorial.c  hello_world.cpp  massives_change.c  massives_reverse.c  root2.c  tmp.c
(+8 files in other folders)
